# my_whisper

./: .gitignore  README.md  Report.md  main.py  pyproject.toml  server_stt.py
